apps/sillytavern/namespace-sillytavern.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sillytavern
  labels:
    app.kubernetes.io/name: sillytavern
    app.kubernetes.io/instance: sillytavern
    # OMG the app needs to chmod a bunch of files at runtime?!
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
