apps/sillytavern/deployment-oauth2-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sillytavern
  name: oauth2-proxy
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: sillytavern
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
      app.kubernetes.io/instance: sillytavern
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
        app.kubernetes.io/instance: sillytavern
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      automountServiceAccountToken: false
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.7.1
          imagePullPolicy: Always
          args:
            - --config=/etc/oauth2-proxy-configs/oauth2-proxy.conf
            - --skip-provider-button=true
            - --provider=oidc
            - --client-id=sillytavern
            - --oidc-issuer-url=https://auth.jdmarble.net
            - --code-challenge-method=S256
            - --whitelist-domain=sillytavern.jdmarble.net
            - --email-domain=jdmarble.com
            - --cookie-expire=4h0m0s
            - --upstream=http://sillytavern
            - --http-address=0.0.0.0:4180
            - --request-logging=true
            - --redirect-url=https://sillytavern.jdmarble.net/oauth2/callback
            - --set-authorization-header=true
          ports:
            - name: http
              containerPort: 4180
          livenessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
          startupProbe:
            httpGet:
              path: /ready
              port: http
              scheme: HTTP
            failureThreshold: 60
            periodSeconds: 5
          resources:
            requests:
              cpu: 1m
              memory: 64Mi
            limits:
              cpu: 1
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: secret
              mountPath: /etc/oauth2-proxy-configs
      volumes:
        - name: secret
          secret:
            secretName: oauth2-proxy
