apps/sillytavern/service-oauth2-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: sillytavern
  name: oauth2-proxy
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: sillytavern
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: sillytavern
