apps/sillytavern/service-sillytavern.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: sillytavern
  name: sillytavern
  labels:
    app.kubernetes.io/name: sillytavern
    app.kubernetes.io/instance: sillytavern
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: sillytavern
    app.kubernetes.io/instance: sillytavern
