apps/sillytavern/httproute-sillytavern.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: sillytavern
  name: sillytavern
  labels:
    app.kubernetes.io/name: sillytavern
    app.kubernetes.io/instance: sillytavern
spec:
  parentRefs:
    - namespace: cilium
      name: jdmarble-net
  hostnames:
    - "sillytavern.jdmarble.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy
          port: 80
